--- a/src/app.css
+++ b/src/app.css
@@ -75,4 +75,20 @@ body {
 	a {
 		@apply text-red hover:underline;
 	}
+	.grain-bg {
+		position: relative;
+	}
+	.grain-bg:before {
+		content: '';
+		display: block;
+		background: url(/img/grain.svg);
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 10;
+		opacity: 0.4;
+		filter: contrast(170%) brightness(100%);
+	}
 }
