--- a/src/app.css
+++ b/src/app.css
@@ -39,16 +39,17 @@ html {
 
 html,
 body {
-	max-width: 100vw;
 	overflow-x: hidden;
+	/* max-width: 100vw;
+	
 	margin: 0;
 	padding: 0;
-	height: 100%;
+	height: 100%; */
 }
 body {
 	font-size: theme(fontSize.base);
 	color: theme(colors.dark-grey);
-	min-height: 100%;
+	/* min-height: 100%; */
 }
 
 b {
